--- a/package.json
+++ b/package.json
@@ -9,16 +9,22 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@chakra-ui/avatar": "^2.2.7",
+    "@chakra-ui/button": "^2.0.18",
+    "@chakra-ui/icons": "^2.0.17",
+    "@chakra-ui/image": "^2.0.15",
     "@chakra-ui/react": "^2.5.4",
-    "@emotion/react": "^11.10.6",
-    "@emotion/styled": "^11.10.6",
+    "@chakra-ui/toast": "^6.1.0",
     "@reduxjs/toolkit": "^1.9.3",
+    "axios": "^1.3.4",
+    "formik": "^2.2.9",
     "framer-motion": "^10.9.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
     "react-redux": "^8.0.5",
-    "react-router-dom": "^6.9.0"
+    "react-router-dom": "^6.9.0",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
