--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-icons": "^4.8.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.9.0",
+    "react-slick": "^0.29.0",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
