--- a/package.json
+++ b/package.json
@@ -17,14 +17,15 @@
     "@chakra-ui/toast": "^6.1.0",
     "@reduxjs/toolkit": "^1.9.3",
     "axios": "^1.3.4",
-    "formik": "^2.2.9",
     "framer-motion": "^10.9.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-error-boundary": "^4.0.3",
     "react-icons": "^4.8.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.9.0",
     "react-slick": "^0.29.0",
+    "socket.io-client": "^4.6.1",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
